# MultiAgent

./: .env.example  .gitignore  README.md  chainlit.md  pyproject.toml
src/multiagent/: app.py  project_planning.py
src/multiagent/config/: tasks.yaml
